# OmniNWM

./: .gitignore  LICENSE  README.md  dist_train_mlp.sh  requirements.txt  setup.py
configs/base/: data_config.py  mmdit_config.py  occ_config.py  vae_config.py  vla_config.py
configs/inference/: infer.py  infer_nuplan.py  infer_with_occ_vla.py
configs/train/: stage_1.py  stage_2.py  stage_3.py
omninwm/: registry.py
omninwm/datasets/: __init__.py  aspect.py  bucket.py  config.py  dataloader.py  datasets.py  pin_memory_cache.py  sampler.py  utils.py
omninwm/models/: __init__.py
omninwm/models/OmniNWM-VLA/: README.md  requirements.txt
omninwm/models/OmniNWM-VLA/tri_modal_qwen/: .gitignore  Makefile  README.md  README_zh.md  evaluate_stage1_features.py  evaluate_stage2.py  pyproject.toml  run_evaluation.sh  run_midi_feature_extraction.sh  run_stage2_llama_factory.sh  setup.py  visualize_results.py
omninwm/models/OmniNWM-VLA/tri_modal_qwen/SSR/: precompute_features.py  precompute_features_parallel.py  run_stage1.sh
omninwm/models/OmniNWM-VLA/tri_modal_qwen/SSR/ssr/train/: train_reasoning.py
omninwm/models/OmniNWM-VLA/tri_modal_qwen/SSR/ssr/utils/: prompt.py
omninwm/models/OmniNWM-VLA/tri_modal_qwen/SSR/webpage/: index.html  ssr-cot.html  ssrbench.html
omninwm/models/OmniNWM-VLA/tri_modal_qwen/llama_factory_configs/: custom_dataset.py  custom_trainer.py  stage2_end_to_end.yaml
omninwm/models/OmniNWM-VLA/tri_modal_qwen/scripts/: clean_image_tokens.py  extract_tmi_features.py  inference.py  inference_llama_factory.sh  inject_tmi_to_qwen.py  monitor_overfitting.py
omninwm/models/OmniNWM-VLA/tri_modal_qwen/src/tri_modal_qwen/: __init__.py
omninwm/models/OmniNWM-VLA/tri_modal_qwen/src/tri_modal_qwen/modeling/: __init__.py  configuration_tri_modal_qwen.py  modeling_tri_modal_qwen.py
omninwm/models/OmniNWM-VLA/tri_modal_qwen/src/tri_modal_qwen/modeling/modules/: __init__.py  batchnorm_fp32.py  encoders.py  fusion.py  tmi_module.py
omninwm/models/hunyuan_vae/: __init__.py  autoencoder_kl_causal_3d.py  distributed.py  policy.py  tensor_parallel.py  (+3 more)
omninwm/utils/: cai.py  ckpt.py  config.py  dist.py  inference.py  logger.py  misc.py  optimizer.py  sampling.py  train.py  vis_occ.py
tools/: inference.py  train.py
(+56 files in other folders)
